# 3dt

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
src/: app.cpp  bitmap_font.cpp  bitmap_font.h  gl_loader.cpp  gl_loader.h  mesh.cpp  mesh.h  obj_loader.cpp  overlay.cpp  overlay.h  platform.h  platform_macos.mm  platform_win32.cpp  platform_x11.cpp  renderer.cpp  renderer.h  step_internal.h  step_loader.cpp  step_tess.cpp  stl_loader.cpp  version.h
test/: assembly.step  assembly_mapped.step  box.step  cube_ascii.stl  cube_binary.stl  cylinder.step
